tooling/nargo_cli/tests/snapshots/execution_success/brillig_not/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _15",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 1: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(0))], q_c: 0 }), Single(Expression { mul_terms: [], linear_combinations: [], q_c: 2 })], outputs: [Simple(Witness(2)), Simple(Witness(3))]",
    "BLACKBOX::RANGE [_2]:253 bits []",
    "BLACKBOX::RANGE [_3]:1 bits []",
    "EXPR [ (1, _0) (-2, _2) (-1, _3) 0 ]",
    "EXPR [ (-1, _2) (-1, _4) 10944121435919637611123202872628637544274182200208017171849102093287904247808 ]",
    "BLACKBOX::RANGE [_4]:253 bits []",
    "BRILLIG CALL func 2: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(-1, Witness(2))], q_c: 10944121435919637611123202872628637544274182200208017171849102093287904247808 })], outputs: [Simple(Witness(5))]",
    "EXPR [ (-1, _2, _5) (10944121435919637611123202872628637544274182200208017171849102093287904247808, _5) (1, _6) -1 ]",
    "EXPR [ (-1, _2, _6) (10944121435919637611123202872628637544274182200208017171849102093287904247808, _6) 0 ]",
    "EXPR [ (1, _3, _6) (1, _6, _6) (-1, _7) 0 ]",
    "BLACKBOX::RANGE [_7]:1 bits []",
    "BRILLIG CALL func 0: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(3))], q_c: 0 })], outputs: [Simple(Witness(8))]",
    "EXPR [ (1, _8) 0 ]",
    "BRILLIG CALL func 1: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(1))], q_c: 0 }), Single(Expression { mul_terms: [], linear_combinations: [], q_c: 2 })], outputs: [Simple(Witness(9)), Simple(Witness(10))]",
    "BLACKBOX::RANGE [_9]:253 bits []",
    "BLACKBOX::RANGE [_10]:1 bits []",
    "EXPR [ (1, _1) (-2, _9) (-1, _10) 0 ]",
    "EXPR [ (-1, _9) (-1, _11) 10944121435919637611123202872628637544274182200208017171849102093287904247808 ]",
    "BLACKBOX::RANGE [_11]:253 bits []",
    "BRILLIG CALL func 2: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(-1, Witness(9))], q_c: 10944121435919637611123202872628637544274182200208017171849102093287904247808 })], outputs: [Simple(Witness(12))]",
    "EXPR [ (-1, _9, _12) (10944121435919637611123202872628637544274182200208017171849102093287904247808, _12) (1, _13) -1 ]",
    "EXPR [ (-1, _9, _13) (10944121435919637611123202872628637544274182200208017171849102093287904247808, _13) 0 ]",
    "EXPR [ (1, _10, _13) (1, _13, _13) (-1, _14) 0 ]",
    "BLACKBOX::RANGE [_14]:1 bits []",
    "BRILLIG CALL func 0: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(10))], q_c: 0 })], outputs: [Simple(Witness(15))]",
    "EXPR [ (1, _15) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U1) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 14 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 1 }, Stop { return_data: HeapVector { pointer: Relative(2), size: Relative(3) } }, Return, Call { location: 19 }, Not { destination: Relative(2), source: Relative(1), bit_size: U1 }, Mov { destination: Relative(1), source: Relative(2) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 24 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]",
    "unconstrained func 1",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 2",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "pZLRioMwEEX/Jc8+JGOi1V8pRaKmJRCipLqwiP++k0l1C6VQ7Ms96uQMmZiF9aadb4311+HO6vPC2mCds7fGDZ2e7ODx68J4DFGwWqxrxrZSMwVjYuVpLXYYdTB+YrWfncvYj3YzLbqP2hMnHbDKM2Z8j8SGV+tMfFqzf5u/V0HCQ4Yy33X1uS/k5sMhn4vdlwd8UcFXPhT5Pj8c8RV/c34XfNOdDS9/HzcsKIEyp5SUirKgLClPlFWyHjLauGmBOp69QF8hZIJKKBLKhFNCRQCeIBIgIXUB7FIgVLydcehgdetM3HmcbfbdNgi+Tr/jVtku+hiGzvRzMHHop9uOeRZVBvKyxoP5Aw==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple Brillig function.\n//\n// The features being tested is not instruction on brillig\nfn main(x: Field, y: Field) {\n    // Safety: testing context\n    unsafe {\n        assert(false == not_operator(x as bool));\n        assert(true == not_operator(y as bool));\n    }\n}\n\nunconstrained fn not_operator(x: bool) -> bool {\n    !x\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "not_operator",
    "directive_integer_quotient",
    "directive_invert"
  ]
}
